<resources>
    <string name="app_name">TrackerAdminApplication</string>
    <string name="admin">Admin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="workers">Workers</string>
    <string name="more">More options</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="workers_list">Workers List</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone no:</string>
    <string name="back">Back</string>
    <string name="status">Status</string>
    <string name="add_worker">Add Worker</string>
    <string name="adhar">Adhar :</string>
    <string name="address">Address</string>
    <string name="no_workers">"No Workers has been added "</string>
</resources>