<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".admin.ui.MoreOptionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/add_worker"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:layout_marginTop="15dp"

        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/name_edt_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="19sp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/phone_edt_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/adhar"
                    android:textSize="19sp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/adhar_edt_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="19sp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/address_edt_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="textMultiLine"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/addWorkerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_worker"
                android:layout_gravity="center"
                android:backgroundTint="@color/theme_color"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:visibility="gone"
                android:id="@+id/messageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                tools:text="Worker added successfully"
                android:layout_marginTop="50dp"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>